css/kata.css
@import url(http://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);

body { 
	background-color: #fff; 
	padding: 20px; 
}

#myKata {
  font-family: 'Roboto', sans-serif; 
	font-size: 16px; 
	font-weight: 400;
	width: 650px;
	height: 750px;
	position: relative;
	overflow: hidden;
	color: white;
	background: #000 url('../images/blackcat.jpg') no-repeat 0 0;
}

#myKata h1 {
	font-weight: 100;
	font-size: 2em;
	text-transform: uppercase;
	margin: 0;
	position: absolute;
	top: 25px;
	left: 36px;
}

#myKata h1 span {
	display: block;
	font-weight: 900;
	font-family: 'Titillium Web', sans-serif;
	font-size: 3.2em;
	line-height: 75px;
}

#myKata h2 {
	font-size: 3em;
	margin: 0;
	font-weight: 100;
}

#myKata h2 {
	font-size: 2.4em;
	margin: 0;
	font-weight: 100;
}

#myKata p {
	margin: 0 14px 14px 0;
}

#myKata .btn {
	display: inline-block;
	cursor: pointer;
	background-color: #c04b01;
	color: #fff;
	text-decoration: none;
	padding: 5px 15px;
	border-radius: 6px;
}

/* Progress Bar */
#myKata .progress {
	width: 550px;
	position: absolute;
	top: 160px;
	left: 40px;
}

#myKata .progress div {
	position: relative;
	display: inline-block;
	width: 30px;
	height: 30px;
	margin-right: 30px;
	border-radius: 50%;
	background-color: rgba(255, 255, 255, .2);
	transition: background-color 1s;
	
}

#myKata .progress div::after {
	content: '';
	display: block;
	position: absolute;
	top: -60px;
	left: -15px;
	width: 65px;
	height: 40px;
	background: url(../images/icon_correct.svg) no-repeat 7px 0;
	transition: opacity 1s, top 1s;
	opacity: 0;
}

#myKata .progress div.tutorial.on {
	border-radius: 10%;
	background-color: #11ff77;
}

#myKata .progress div.on,
#myKata .progress div.answered {
	background-color: #efbe5e;
}

#myKata .progress div.tutorial.answered {
	border-radius: 10%;
	background-color: #11ff77;
}

#myKata .progress div.correct::after {
	top: -5px; 
	opacity: 1;
}

/* Intro */
#myKata .intro {
	position: absolute;
	top: 225px;
	left: 660px;
	width: 550px;
}

#myKata .intro p {
	margin: 0 0 25px 0;
}

/* Questions */
#myKata div.hint {
	display: inline-block;
	font-size: 1.1em;
	width: 90%;
	padding: 0px;
	margin: 15px 0 15px 0;
	position: relative;
	color: #459a2e;
	background-color: rgba(0, 0, 0, .9);
}

#myKata .question {
	width: 550px;
	position: absolute;
	top: 225px;
	left: 660px;
}



#myKata .question .txt {
	font-size: 1.6em;
	margin: 0 0 20px 0;
}

#myKata .question .ans {
	display: inline-block;
	font-size: 1.1em;
	width: 225px;
	border: 2px solid rgba(238, 189, 102, .4);
	border-radius: 6px;
	padding: 10px;
	margin: 0 15px 15px 0;
	position: relative;
}

#myKata .question .ans.selected {
	border-color: #be4b16;
}

#myKata .question .ans.correct {
	border-color: #459a2e;
}

#myKata .question .ans::after {
	content: '';
	display: block;
	width: 20px;
	height: 20px;
	background: no-repeat 0 0;
	background-size: 20px 20px;
	position: absolute;
	top: 5px;
	right: 5px;
}

#myKata .question .ans.selected::after {
	background-image: url(../images/icon_incorrect.svg);
}

#myKata .question .ans.correct::after {
	background-image: url(../images/icon_correct.svg);
}

#myKata .question.unanswered .ans{
	cursor: pointer;
}

#myKata .question.unanswered .ans:hover{
	background-color: rgba(238, 189, 102, .2);
}

#myKata .question.unanswered .ans{
	cursor: default;
}

#myKata .question .ans.image {
	min-height: 60px;
	padding: 0px;
	background-repeat: no-repeat;
	background-position: 0 0;
}

#myKata .question .ans.known, 
#myKata .question .ans.known:hover,
#myKata .question .ans.known:active,
#myKata .question .ans.known:visited {
	background-color: darkgreen;
}

#myKata .question .ans.unknown,
#myKata .question .ans.unknown:hover,
#myKata .question .ans.unknown:active,
#myKata .question .ans.unknown:visited {
	background-color: black;
}

/* Feedback */
#myKata .feedback {
	color: #efbe5e;
	margin: 50px 0;
	transition: opacity 1.5s, margin-top 1.5s;
	visibility: hidden;
	opacity: 0;
}

#myKata .feedback .btn {
	margin-top: 5px;
}

#myKata .feedback strong {
	color: #459a2e;
}

#myKata .feedback em {
	color: #be4b16;
}

#myKata .answered .feedback {
	visibility: visible; 
	opacity: 1;
	margin-top: 10px;
	border: 1px solid rgba(238, 189, 102, .1); 
	border-radius: 6px;
	background-color: rgba(0, 0, 0, .9);
	padding: 5px;
}

/* Results */
#myKata .results {
	position: absolute;
	top: 200px;
	left: 660px;
	width: 550px;
}

#myKata .results .share {
	margin-top: 40px;
}

#myKata .results .share a.btn {
	margin-right: 20px;
	padding: 9px 15px 8px 42px;
	background-repeat: no-repeat;
	background-position: 10px 5px;
	background-size: 25px 25px;
}

#myKata .results .share a.btn.email {
	background-color: #f0a121; 
	background-image: url(../images/icon_email.svg);
}

#myKata .results .share a.btn.twitter {
	background-color: #59adeb; 
	background-image: url(../images/icon_twitter.svg);
}

#myKata .active,
#myKata .inactive {
	transition: left 1.5s, ease-in-out;
}

#myKata .active {
	left: 40px;
}

#myKata .intro.inactive,
#myKata.inactive.answered{
	left: -1350px;
}

/* Responsive */
@media screen and (max-width: 650px) {
	body {
		padding: 0;
		margin: 0;
	}
	
	#myKata {
		width: 320px;
		background-size: 320px auto;
	}
	
	#myKata h1 {
		width: 300px;
		font-size: 1em;
		top: 25px;
		left: 25px;
	}
	
	#myKata h1 span {
		line-height: 43px;
		font-size: 3em;
	}
	
	#myKata h2 {
		margin: 10px 0;
	}
	
	#myKata h3 {
		font-size: 2.2em;
		margin-bottom: 15px;
	}
	
	#myKata .progress {
		width: 300px;
		top: 110px;
		left: 25px;
	}
	
	#myKata .progress div {
		width: 25px;
		height: 25px;
		margin-right: 20px;
	}
	
	#myKata .progress div::after {
		top: -30px;
		width: 53px;
		height: 33px;
	}
	
	#myKata .intro {
		width: 300px;
		top: 135px;
		left: 330px;
	}
	
	#myKata .question {
		width: 300px;
		top: 135px;
		left: 330px;
	}
	
	#myKata .question .txt {
		font-size: 1.4em;
		margin-bottom: 15px;
		width: 290px;
	}
	
	#myKata .question .ans {
		font-size: 1em;
		padding: 5px 10px;
		margin-bottom: 10px;
	}
	
	#myKata .question .ans.image {
		min-height: 45px;
		background-size: auto 45px;	
	}
	
	#myKata .question .ans.image:hover {
		background-color: #000;
	}
	
	#myKata .results {
		width: 260px;
		top: 150px;
		left: 330px;
	}
	
	#myKata .results .share {
		margin-top: 20px;
	}
	
	#myKata .results a.btn {
		margin-bottom: 10px;
		margin-top: 10px;
	}
	
	#myKata .active {
		left: 25px;
	}
	
	#myKata .intro.inactive, #myKata.inactive.answered {
		left: -650px;
	}
	
	#myKata .feedback {
		margin: 10px 0;
	}
}

